--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           AWS_S3_BUCKET: cmslead
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: your-region
-          SOURCE_DIR: dist/your-app-name
+          AWS_REGION: ap-south-1
+          SOURCE_DIR: dist/survey-popup
